# smsgate

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  config.toml.example  partitions_ota.csv  platformio.ini  sdkconfig.defaults
.cargo/: config.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: command_parse.rs  pdu_decode.rs  urc_parse.rs
harness/: Cargo.toml
rfc/: 0001-foundation.md  0001-tls-cert-pinning.md  0002-agent-harness.md  0002-sms-pdu-mode.md  0003-bidirectional-telegram-to-sms.md  0003-i18n-and-ui-strings.md  0004-cellular-fallback.md  0004-fanout-delivery.md  0005-incoming-call-notify.md  0005-ota.md  0006-ring-pin-interrupt-sleep.md  0007-testability-native-tests-di.md  0008-voice-prompts-and-tg-call-bridge.md  0009-concat-sms-tx.md  0010-status-command.md  0011-sms-delivery-reports.md  0012-outbound-message-queue.md  0013-wifi-provisioning.md  0014-multi-user-allow-list.md  0015-hardware-watchdog.md  0016-per-requester-command-reply.md  0017-scheduled-heartbeat.md  0018-sms-block-list.md  0019-runtime-user-management.md  0020-persistent-sms-log.md  0021-runtime-sms-block.md  0022-startup-notification-improvement.md  0023-restart-bot-command.md  0024-blocked-sms-debug-log.md  0025-nvs-failure-notification.md  0026-send-command.md  0027-operator-name-status.md  0028-wdt-reset-in-dosendmessage.md  0029-send-body-preview.md  0030-send-reply-target.md  0031-csq-trend-flash-usage.md  0032-sms-delivery-confirmation.md  0033-queue-command.md  0034-outbound-queue-in-status.md  0035-outbound-failure-debug-log.md  (+242 more)
src/: allow_list.h  call_handler.cpp  call_handler.h  config.rs  creds.rs  delivery_report_handler.cpp  delivery_report_handler.h  delivery_report_map.h  ibot_client.h  (+33 more)
(+99 files in other folders)
