[package]
name = "smsgate-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
smsgate = { path = "..", default-features = false }

[[bin]]
name = "pdu_decode"
path = "fuzz_targets/pdu_decode.rs"
test = false
doc = false

[[bin]]
name = "urc_parse"
path = "fuzz_targets/urc_parse.rs"
test = false
doc = false

[[bin]]
name = "command_parse"
path = "fuzz_targets/command_parse.rs"
test = false
doc = false

[workspace]
